src/app/containers/Home/stylesheets/Home.scss
$introTextColor: #5f5555;

.image-profile-pic {
  height: 180px;
  border-radius: 50%;

  &.align-center {
    display: block;
    margin: auto;
  }
}

.row-top {
  padding-top: 15px;
}

.row-custom {
  text-align: center;
}

.intro-text {
  width: 360px;
  margin: auto;
  color: $introTextColor;

  p {
    margin-bottom: 5px;
  }
}

.intro-heading {
  line-height: 30px;
}

.row-social {
  text-align: center;
  padding-top: 25px;
}

a.social {
  margin-right: 10px;

  &.linkBlack {
    color: black;
  }
  &.linkFacebook {
    color: #3b5998;
  }
  &.linkLinkedin {
    color: #0077B5;
  }
  &.linkTwitter {
    color: #1DA1F2;
  }

}

